Fixed margin collapsing

--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -112,7 +112,7 @@ body.blog {
 .post {
   margin-top: 50px;
   margin-bottom: 50px;
-  padding: 1px 0;
+  padding: 0px 0 1px;
 
   a {
     color: $blog-a;
